--- a/layouts/partials/home_index.html
+++ b/layouts/partials/home_index.html
@@ -92,7 +92,7 @@
       <div class="i_hd">
         <h3>Resources</h3>
       </div>
-      <div class="row">
+      <div class="row home-resource-section">
 
         <div class="col-12 col-md-4 ">
           <a class="a1" href="https://iscps.westlake.edu.cn/"    target="_blank">
@@ -112,6 +112,27 @@
             <p>Low-Code Industrial Intelligence Platform</p>
           </a>
         </div>
+      </div>
+
+    </div>
+
+
+    <div>
+      <div class="i_hd">
+        <h3>Collaborator</h3>
+      </div>
+      <div class="row home-collaborator-section">
+
+        <div class="col-12 col-md-4 ">
+          <img src="{{ "image/collaborator/dx1.png" | relLangURL }}"  >
+        </div>
+
+        <div class="col-12 col-md-4 ">
+          <img src="{{ "image/collaborator/dx2.png" | relLangURL }}"  >
+        </div>
+
+
+
       </div>
 
     </div>
