--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -42,7 +42,7 @@ h3.article-title a:hover, a:hover {
 
 
 .logo-r-text {
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding-left: 1rem;
 }
 
@@ -272,6 +272,8 @@ h3.article-title a:hover, a:hover {
 .home-collaborator-section {
   img {
     height: 70px;
+    max-width: 100%;
+    margin: 1rem;
   }
 }
 
