--- a/layouts/partials/home_index.html
+++ b/layouts/partials/home_index.html
@@ -123,6 +123,17 @@
       </div>
       <div class="row home-collaborator-section">
 
+
+        {{ range .Params.collaborators }}
+
+        <div class="col-6 col-md-2 ">
+          <img src="{{ .image | relLangURL }}"  >
+        </div>
+
+        {{ end }}
+
+        {{/*
+        <!--
         <div class="col-12 col-md-4 ">
           <img src="{{ "image/collaborator/dx1.png" | relLangURL }}"  >
         </div>
@@ -130,7 +141,8 @@
         <div class="col-12 col-md-4 ">
           <img src="{{ "image/collaborator/dx2.png" | relLangURL }}"  >
         </div>
-
+        -->
+        */}}
 
 
       </div>
