--- a/layouts/partials/home_index.html
+++ b/layouts/partials/home_index.html
@@ -7,7 +7,7 @@
       <div class="col-12 col-md-6 ">
 
         <div class="home-video-wrapper home-cell-item">
-          <video src="{{ "video/home.mp4" | relLangURL }}" controls=""></video>
+          <video src="{{ "video/video-test.mp4" | relLangURL }}" controls=""></video>
         </div>
 
       </div>
