--- a/layouts/partials/home_index.html
+++ b/layouts/partials/home_index.html
@@ -15,7 +15,7 @@
 
         <div class="liimg home-cell-item">
           <a href="info/1011/1068.htm" target="_blank" title="课题组合影">
-            <img src="{{ "image/lab-1.jpg" | relLangURL }}" alt="课题组合影">
+            <img src="{{ "image/h-people.jpg" | relLangURL }}" alt="课题组合影">
           </a>
         </div>
 
